// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSchema > PostgreSQL dialect > field type mappings > maps all field types correctly 1`] = `
"import { pgTable, varchar, text, integer, numeric, boolean, timestamp, jsonb, uuid } from 'drizzle-orm/pg-core'

export const shopProducts = pgTable('shop_products', {
  id: uuid('id').primaryKey().defaultRandom(),

  teamId: text('teamId').notNull(),
  owner: text('owner').notNull(),
  title: text('title').notNull(),
  content: text('content'),
  count: integer('count'),
  price: numeric('price'),
  enabled: boolean('enabled').$default(() => false),
  publishedAt: timestamp('publishedAt', { withTimezone: true }).$default(() => new Date()),
  metadata: jsonb('metadata').$default(() => ({})),
  items: jsonb('items').$default(() => (null)),
  tags: jsonb('tags').$default(() => (null)),

  createdAt: timestamp('createdAt', { withTimezone: true }).notNull().$default(() => new Date()),
  updatedAt: timestamp('updatedAt', { withTimezone: true }).notNull().$onUpdate(() => new Date()),
  createdBy: text('createdBy').notNull(),
  updatedBy: text('updatedBy').notNull()
})"
`;

exports[`generateSchema > PostgreSQL dialect > generates correct schema for basic collection 1`] = `
"import { pgTable, varchar, text, integer, numeric, boolean, timestamp, jsonb, uuid } from 'drizzle-orm/pg-core'

export const shopProducts = pgTable('shop_products', {
  id: uuid('id').primaryKey().defaultRandom(),

  teamId: text('teamId').notNull(),
  owner: text('owner').notNull(),
  name: varchar('name', { length: 255 }).notNull(),
  description: text('description'),
  price: numeric('price'),
  active: boolean('active').$default(() => false),

  createdAt: timestamp('createdAt', { withTimezone: true }).notNull().$default(() => new Date()),
  updatedAt: timestamp('updatedAt', { withTimezone: true }).notNull().$onUpdate(() => new Date()),
  createdBy: text('createdBy').notNull(),
  updatedBy: text('updatedBy').notNull()
})"
`;

exports[`generateSchema > SQLite dialect > field type mappings > maps all field types correctly 1`] = `
"import { nanoid } from 'nanoid'
import { sqliteTable, text, integer, real, customType } from 'drizzle-orm/sqlite-core'

// Custom JSON column that handles NULL values gracefully during LEFT JOINs
const jsonColumn = customType<any>({
  dataType() {
    return 'text'
  },
  fromDriver(value: unknown): any {
    if (value === null || value === undefined || value === '') {
      return null
    }
    return JSON.parse(value as string)
  },
  toDriver(value: any): string {
    return JSON.stringify(value)
  },
})

export const shopProducts = sqliteTable('shop_products', {
  id: text('id').primaryKey().$default(() => nanoid()),

  teamId: text('teamId').notNull(),
  owner: text('owner').notNull(),
  title: text('title').notNull(),
  content: text('content'),
  count: integer('count'),
  price: real('price'),
  enabled: integer('enabled', { mode: 'boolean' }).$default(() => false),
  publishedAt: integer('publishedAt', { mode: 'timestamp' }).$default(() => new Date()),
  metadata: jsonColumn('metadata').$default(() => ({})),
  items: jsonColumn('items').$default(() => (null)),
  tags: jsonColumn('tags').$default(() => (null)),

  createdAt: integer('createdAt', { mode: 'timestamp' }).notNull().$default(() => new Date()),
  updatedAt: integer('updatedAt', { mode: 'timestamp' }).notNull().$onUpdate(() => new Date()),
  createdBy: text('createdBy').notNull(),
  updatedBy: text('updatedBy').notNull()
})"
`;

exports[`generateSchema > SQLite dialect > generates correct schema for basic collection 1`] = `
"import { nanoid } from 'nanoid'
import { sqliteTable, text, integer, real, customType } from 'drizzle-orm/sqlite-core'

// Custom JSON column that handles NULL values gracefully during LEFT JOINs
const jsonColumn = customType<any>({
  dataType() {
    return 'text'
  },
  fromDriver(value: unknown): any {
    if (value === null || value === undefined || value === '') {
      return null
    }
    return JSON.parse(value as string)
  },
  toDriver(value: any): string {
    return JSON.stringify(value)
  },
})

export const shopProducts = sqliteTable('shop_products', {
  id: text('id').primaryKey().$default(() => nanoid()),

  teamId: text('teamId').notNull(),
  owner: text('owner').notNull(),
  name: text('name').notNull(),
  description: text('description'),
  price: real('price'),
  active: integer('active', { mode: 'boolean' }).$default(() => false),

  createdAt: integer('createdAt', { mode: 'timestamp' }).notNull().$default(() => new Date()),
  updatedAt: integer('updatedAt', { mode: 'timestamp' }).notNull().$onUpdate(() => new Date()),
  createdBy: text('createdBy').notNull(),
  updatedBy: text('updatedBy').notNull()
})"
`;
